changed about to info to add section about site

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
 	<div class="nav-container">
 		<button class="nav-button-container half-transition">
-			<a id="" class="nav-link" href="#">
+			<a id="nav-home" class="nav-link" href="#">
 				Home
 			</a>
 		</button>
 		<button class="nav-button-container half-transition">
-			<a id="my-info" class="nav-link" href="#">
-				My Info
+			<a id="nav-info" class="nav-link" href="#">
+				About Me
 			</a>
 		</button>
 		<button class="nav-button-container half-transition">
-			<a id="" class="nav-link" href="#">
+			<a id="nav-about" class="nav-link" href="#">
 				About Site
 			</a>
 		</button>
@@ -37,7 +37,7 @@
 	
 	<div class="master-outer-container">
 		
-
+			<a name="linkHome"></a>
 			<div id="home" class="home-container">
 				<div class="home-bg-container"></div>
 				<div class="home-plane-object">
@@ -58,11 +58,11 @@
 					<h4 id="home-sub-title-3"></h4>
 				</div>
 			</div>
-			<a name="myInfo"></a>
-			<div id="about-trigger" class="about-container">
-				<div class="about-inner-container">
-					<div class="left-about-container">
-						<div class="profile-about-image-container hvr-wobble-vertical">
+			<a name="linkInfo"></a>
+			<div id="info-trigger" class="info-container">
+				<div class="info-inner-container">
+					<div class="left-info-container">
+						<div class="profile-info-image-container hvr-wobble-vertical">
 							<img src="images/danny-hwang.jpg">
 						</div>
 						<h3>Danny Hwang</h3>
@@ -70,7 +70,7 @@
 						<h4>Frontend Engineer</h4>
 						<h4>Passionate Coder</h4>
 					</div>
-					<div class="right-about-container">
+					<div class="right-info-container">
 						<p>
 							<b>
 								Hello! My name is Danny Shyh Ru Hwang.
@@ -126,9 +126,15 @@
     		$('html,body').animate({scrollTop: (aTag.offset().top - $('.nav-container').height() + 1)},'slow');
 		}
 
-		$("#my-info").click(function() {
-   			scrollToAnchor('myInfo');
+		$("#nav-home").click(function() {
+   			scrollToAnchor('linkHome');
 		});
+
+		$("#nav-info").click(function() {
+   			scrollToAnchor('linkInfo');
+		});
+
+		
 
 
 		$(document).ready(function(){
@@ -176,18 +182,18 @@
 
 			tAbout = gsap.timeline();
 			tAbout
-				.to(".about-container", {backgroundColor: "#31708e", duration: 0.5})
-				.to(".profile-about-image-container", {y: 0, opacity: 1, duration: 0.5}, "<")
-				.to(".profile-about-image-container img", {y: 0, opacity: 1, borderWidth: 10, borderColor: "#f4f4f4", ease: "Back.easeInOut", duration: 1}, "<")
-				.to(".right-about-container", { opacity: 1, duration: 0.5}, ">")
-				.to(".right-about-container p", { x: 0, opacity: 1, stagger: 0.25, duration: 0.5}, "<")
-				.to(".left-about-container h3", { display: "block", opacity: 1, duration: 0.5},">")
-				.to(".left-about-container h4", { display: "block", opacity: 1, stagger: 0.25, duration: 0.5})
-				.to(".left-about-container", {padding: "15px 25px", borderRadius: "10px", backgroundColor: "#8b9dc3", color: "white",  duration: 0.5})
+				.to(".info-container", {backgroundColor: "#31708e", duration: 0.5})
+				.to(".profile-info-image-container", {y: 0, opacity: 1, duration: 0.5}, "<")
+				.to(".profile-info-image-container img", {y: 0, opacity: 1, borderWidth: 10, borderColor: "#f4f4f4", ease: "Back.easeInOut", duration: 1}, "<")
+				.to(".right-info-container", { opacity: 1, duration: 0.5}, ">")
+				.to(".right-info-container p", { x: 0, opacity: 1, stagger: 0.25, duration: 0.5}, "<")
+				.to(".left-info-container h3", { display: "block", opacity: 1, duration: 0.5},">")
+				.to(".left-info-container h4", { display: "block", opacity: 1, stagger: 0.25, duration: 0.5})
+				.to(".left-info-container", {padding: "15px 25px", borderRadius: "10px", backgroundColor: "#8b9dc3", color: "white",  duration: 0.5})
 
 			var controllerAbout = new ScrollMagic.Controller();
 			var scene = new ScrollMagic.Scene({
-  				triggerElement: "#about-trigger",
+  				triggerElement: "#info-trigger",
   				triggerHook: 0.8,
 				reverse: false
 			})
