specified general link css and behavior

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</b>
 						</p>
 						<p>
-							I am a Frontend Engineer & Web Developer for <a href="https://www.equilar.com/" target="_blank">Equilar</a>, a financial technology company. I maintain, create, and update multiple web assets for Equilar.com, pardot, and our products.
+							I am a Frontend Engineer & Web Developer for <a class="general-link" href="https://www.equilar.com/" target="_blank">Equilar</a>, a financial technology company. I maintain, create, and update multiple web assets for Equilar.com, pardot, and our products.
 						</p>
 						<p>
 							I work closely with stakeholders in design, marketing, IT, products, and leadership to code responsive webpages and features that meets & exceed our myriad of business needs.
@@ -89,10 +89,10 @@
 							If you have any questions, please feel free to contact me!
 						</p>
 						<p>
-							<b>Email:</b> <a href="mailto:dannyhwangca@gmail.com" target="_blank">dannyhwangca@gmail.com</a>
+							<b>Email:</b> <a class="general-link" href="mailto:dannyhwangca@gmail.com" target="_blank">dannyhwangca@gmail.com</a>
 						</p>
 						<p>
-							<b>Phone:</b> <a href="teL:6262445621" target="_blank">(626) 244-5621</a>
+							<b>Phone:</b> <a class="general-link" href="teL:6262445621" target="_blank">(626) 244-5621</a>
 						</p>
 						<p>
 							<b>Location:</b> Greater Los Angeles Area - Eastvale, CA 92880
@@ -187,7 +187,7 @@
 			tNav = gsap.timeline();
 			tNav
 				.to(".nav-link", {color: "#f4f4f4", duration: 0.1})
-				.to(".nav-container", {backgroundColor: "#3b5998", duration: 0.25}, "<")
+				.to(".nav-container", {backgroundColor: "#5085a5", duration: 0.25}, "<")
 
 			var controllerNav = new ScrollMagic.Controller();
 			var scene = new ScrollMagic.Scene({
