fixed nav bg color

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 
 			tNav = gsap.timeline();
 			tNav
-				.to(".nav-link", {color: "#f4f4f4", duration: 0.1})
-				.to(".nav-container", {backgroundColor: "#5085a5", duration: 0.25}, "<")
+				.to(".nav-link", {color: "white", duration: 0.1})
+				.to(".nav-container", {backgroundColor: "#8fc1e3", duration: 0.25}, "<")
 
 			var controllerNav = new ScrollMagic.Controller();
 			var scene = new ScrollMagic.Scene({
