added firefly animation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 			<a name="linkInfo"></a>
 			<div id="info-trigger" class="info-container">
-				<div class="firefly small-firefly firefly-1"></div>
+				<div class="firefly small-firefly firefly-go-right firefly-1"></div>
 				<div class="info-inner-container">
 					<div class="left-info-container">
 						<div class="profile-info-image-container hvr-wobble-vertical">
@@ -214,7 +214,8 @@
 				.to(".left-info-container h3", { display: "block", opacity: 1, duration: 0.5},">")
 				.to(".left-info-container h4", { display: "block", opacity: 1, stagger: 0.25, duration: 0.5})
 				.to(".left-info-container", {padding: "15px 25px", borderRadius: "10px", backgroundColor: "#31708e", color: "white",  duration: 0.5})
-				.to(".firefly", {opacity:1, stagger: 0.25,  duration: 0.5})
+				.to(".firefly", {opacity:1, stagger: 0.25, duration: 0.5})
+				.to(".firefly-go-right", {left:"90%", duration: 20, yoyo: true, repeat: -1},"<")
 			var controllerAbout = new ScrollMagic.Controller();
 			var scene = new ScrollMagic.Scene({
   				triggerElement: "#info-trigger",
