added some site tech info

--- a/index.html
+++ b/index.html
@@ -110,12 +110,15 @@
 
 			<a name="linkSite"></a>
 			<div id="site-trigger" class="site-container">
+				This is a highly stylized site meant to showcase some of my frontend skills.
 
+				Technologies Used:
+				HTML5, CSS3 (keyframes, hover, pseudo elements ), GSAP, Jquery (selectors, DOM state ), ScrollMagic (triggers, hooks, GSAP integration) 
 			</div>
 
 			<a name="linkProject"></a>
 			<div id="project-trigger" class="project-container">
-
+				
 			</div>
 
 			<a name="linkContact"></a>
@@ -163,9 +166,6 @@
 		$("#nav-contact").click(function() {
    			scrollToAnchor('linkContact');
 		});
-
-		
-
 
 		$(document).ready(function(){
 
