--- a/index.html
+++ b/index.html
@@ -108,17 +108,39 @@
 				</div>
 			</div>
 
+			<a name="linkProject"></a>
+			<div id="project-trigger" class="outer-project-container">
+				<div class="inner-project-container">
+					<div class="search-input-container">
+					<h2> Seach Project Title Or Tag </h2>
+					<input 
+							class="form-control search-input" 
+							placeholder="Search Text"
+							v-model="searchTerm"
+					/>
+					</div>
+					<div class="project-container" 
+						v-for="(item, index) in projects"
+						:key="index"
+					>
+					<h2>
+						<a :href="item.link">{{ item.title }}</a>
+					</h2>
+					<p>{{ item.date }}</p>
+					<p>{{ item.description }}</p>
+					<div class="btn-position">
+						<a :href="item.link" class="btn btn-outline-dark">Read more <i class="fas fa-external-link-alt"></i></a> 
+					</div>
+					</div>
+				</div>
+			</div>
+
 			<a name="linkSite"></a>
 			<div id="site-trigger" class="site-container">
 				This is a highly stylized site meant to showcase some of my frontend skills.
 
 				Technologies Used:
 				HTML5, CSS3 (keyframes, hover, pseudo elements ), GSAP, Jquery (selectors, DOM state ), ScrollMagic (triggers, hooks, GSAP integration) 
-			</div>
-
-			<a name="linkProject"></a>
-			<div id="project-trigger" class="project-container">
-				
 			</div>
 
 			<a name="linkContact"></a>
@@ -140,6 +162,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
 	
 	<script>
 		function scrollToAnchor(aid){
